# Nokia-Test-Task

./: CMakeLists.txt  README.md  csv_reader.cpp  csv_reader.hpp  main.cpp
src/: csv_reader.cpp  csv_reader.hpp  main.cpp
test/: test.cpp
test/data/: wrong_table1.csv  wrong_table2.csv  wrong_table3.csv  wrong_table4.csv  wrong_table5.csv  wrong_table6.csv  wrong_table7.csv  wrong_table8.csv
